# Python-Setup

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: python-ci.yml
.gitlab/issue_templates/: feature.md
src/: main.py
test/: test_hello_world.py
tests/: test_hello_world.py
