[project]
name = "pods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "vosk>=0.3.45",
] 
[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
lint = [
  "ruff"
]
format = [
  "ruff",
  "black"
]

[tool.uv]
default-groups = "all"
dev-dependencies = [
    "pre-commit>=4.2.0",
]

[tool.black]
line-length = 80
preview = true
target-version = ['py312','py311', 'py310']
include = 'src|tests'


[tool.ruff]
show-fixes = true
extend-select = ["ALL"]
ignore = ["D100", "D104", "D401", "D211", "D212"]
line-length = 80

exclude = [
  "pyproject.toml",
  ".nox",
  ".vscode",
  ".venv",
  ".git",
  ".ipynb",
  "build",
  "dist",
  "docs",
  "notebooks",
]
[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
  # at least this three should be fine in tests:
  "S101", # asserts allowed in tests...
  "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  # The below are debateable
  "PLR2004", # Magic value used in comparison, ...
  "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
  "TRY003",
  "EM101",
]

